# antire_book

./: README.md
chap_1_introduction/trouble/src/: trouble.c
chap_2_compiler/ld_preload/: CMakeLists.txt
chap_2_compiler/ld_preload/src/: catch_memcmp.c
chap_2_compiler/tea/: CMakeLists.txt
chap_2_compiler/tea/src/: tea.c
chap_2_compiler/trouble/: CMakeLists.txt
chap_3_format_hacks/fakeHeadersHideEntry/: CMakeLists.txt
chap_3_format_hacks/fakeHeadersHideEntry/src/: .fakeHeaders.cpp.kate-swp  fakeHeadersHideEntry.cpp
chap_3_format_hacks/fakeHeadersXbit/src/: fakeHeadersXBit.cpp
chap_3_format_hacks/mixDynamicSymbols/: CMakeLists.txt
chap_3_format_hacks/mixDynamicSymbols/src/: mixDynamicSymbols.cpp
chap_3_format_hacks/stripBinary/: CMakeLists.txt
chap_3_format_hacks/trouble/: CMakeLists.txt
chap_4_static_analysis/dontpanic/: CMakeLists.txt
chap_4_static_analysis/dontpanic/cryptor/: CMakeLists.txt
chap_4_static_analysis/dontpanic/encryptFunctions/src/: encryptFunctions.cpp
chap_4_static_analysis/dontpanic/trouble/: CMakeLists.txt  trouble_layout.lds
chap_4_static_analysis/dontpanic/trouble/src/: trouble.c
chap_6_debugger/dontpanic/: CMakeLists.txt
chap_6_debugger/dontpanic/trouble/: CMakeLists.txt
chap_6_debugger/dontpanic/trouble/src/: trouble.c
unwritten_chapter/: README.md
unwritten_chapter/dontpanic/: CMakeLists.txt
unwritten_chapter/dontpanic/computeChecksums/: CMakeLists.txt
unwritten_chapter/dontpanic/computeChecksums/src/: main.cpp
unwritten_chapter/dontpanic/convertToFile/: CMakeLists.txt
unwritten_chapter/dontpanic/convertToFile/src/: main.cpp
unwritten_chapter/dontpanic/encryptSections/: CMakeLists.txt
unwritten_chapter/dontpanic/encryptSections/src/: main.cpp
unwritten_chapter/dontpanic/stripBinary/: CMakeLists.txt
unwritten_chapter/dontpanic/stripBinary/src/: main.cpp
unwritten_chapter/dontpanic/trouble/: CMakeLists.txt  elf_layout.lds
unwritten_chapter/dontpanic/trouble/src/: load_binary.c  load_binary.h  main.c  maps_parsing.c  maps_parsing.h  ptrace_funcs.c  ptrace_funcs.h
unwritten_chapter/dontpanic/woodenhouse/: CMakeLists.txt
unwritten_chapter/dontpanic/woodenhouse/src/: main.c
